# app/models/base.js
@@ -67,7 +67,7 @@ exports.getAll2Where = function(table_name, sort_obj, where_obj1, where_obj2, cb
     if (error) throw error
     cb(results)
   })
-  console.log(query.sql)
+  //console.log(query.sql)
 }
 
 // ========== 刪除相關 ========== //
@@ -100,9 +100,9 @@ exports.delete2Where = function(table_name, u_id_col, u_id, u_id_col_2, u_id_2, 
 }
 
 // 計算某欄位的數量出現幾次
-// column_obj = { name: 'file_id', alias: 'file_id_total' }
+// column_obj = { name: 'file_id', alias: 'file_id_total', sort_value: 'DESC' }
 exports.count_column = function(table_name, column_obj, cb) {
-  conn.query('SELECT ' + column_obj.name + ', COUNT(' + column_obj.name + ') AS ' + column_obj.alias + ' FROM ' + table_name + ' GROUP BY ' + column_obj.name + ' ORDER BY ' + column_obj.alias + ' DESC', function (error, results, fields) {
+  conn.query('SELECT ' + column_obj.name + ', COUNT(' + column_obj.name + ') AS ' + column_obj.alias + ' FROM ' + table_name + ' GROUP BY ' + column_obj.name + ' ORDER BY ' + column_obj.alias + ' ' + column_obj.sort_value, function (error, results, fields) {
     if (error) throw error
     cb(results)
   })
